# rick-voice

./: .gitignore  README.md  pyproject.toml
examples/: telegram_bot.py
openclaw-skill/: SKILL.md  rick_voice_skill.py
rick_voice/: __init__.py  cli.py  config.py  core.py  rickifier.py
rick_voice/providers/: __init__.py  elevenlabs.py  fish_audio.py
